[package]
name = "osrs-ge-calc"
version = "0.1.0"
edition = "2024"
authors = ["N3cro0oDev"]

[dependencies]
iced = { version = "0.14.0", features = ["canvas", "smol"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
num-format = "0.4.4"
webbrowser = "1.1.0"
#plotters-iced = "0.11.0"